[package]
name = "jink"
version = "0.1.0"
license-file="LICENSE"
repository = "https://github.com/jink-lang/jink"
authors = ["jink-lang", "Jacob Buzalski"]
edition = "2021"

[dependencies]
strum_macros = "0.26"
thiserror = "1.0.59"
indexmap = "2.2.6"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }