[package]
name = "jink"
version = "0.1.0"
license-file="LICENSE"
repository = "https://github.com/jink-lang/jink"
authors = ["jink-lang", "Jacob Noah"]
edition = "2021"

[dependencies]
strum_macros = "0.27.1"
thiserror = "2.0.12"
indexmap = "2.9.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
